objects/BMCServiceDesk__FAQ_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Comment__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAQ_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKFAQ__c</fullName>
        <description>FK to FAQ through MD relationship</description>
        <label>FAQ</label>
        <referenceTo>BMCServiceDesk__FAQ__c</referenceTo>
        <relationshipLabel>FAQ Feedbacks</relationshipLabel>
        <relationshipName>FAQ_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Rating__c</fullName>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Submitted__c</fullName>
        <label>Submitted</label>
        <type>DateTime</type>
    </fields>
</CustomObject>